Changed solution on pinned tooltip for 'Stories Behind The Complaints' and just finding the aboslute position of the tile and then using position:fixed to solve the issue. I'd been trying to essentially engineer my own position:fixed (lol) and it worked ok! But it didn't work perfectly and there was ultimately no reason to do it (plus it introduced a lot of complexity and variables I can now remove).

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 
 :root {
-    --spacer-top: 300px;
-    --spacer-bottom: 400px;
+    --spacer-top: 330px;
+    --spacer-bottom: 370px;
     --spacer-mobile: 700px;
     --annotation-width: 300px;
 }
